fixes research spacing 13

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -250,7 +250,7 @@ p.research-date {
     font-weight: normal;
 }
 
-.research-paper {
+/*.research-paper {
     max-width: 75%;
     margin: 0 auto;
     padding-top: 20px;
